Dark mode bug and team page enhancement

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html {
 	scroll-behavior: smooth;
 	--theme-color: #f47621;
 	--bg1-color: #fff;
+	--bg-Card: rgb(250, 250, 250);
 	--font-color: #111111;
 	--bg2-color: #fff;
 	--shadow-color: #191919;
@@ -41,6 +42,7 @@ html[data-theme='dark'] {
 	--bg1-color: #121212;
 	--font-color: #fff;
 	--bg2-color: #272727;
+	--bg-Card: #202020;
 	--shadow-color: #fff;
 	--footer-bg: #000;
 	--footer-clr: #fff;
@@ -1999,17 +2001,16 @@ input:checked + .slider:before {
 }
 
 .timeline-container .card-stats .btn{
-	background-color: #f47621;
+	background-color: var(--theme-color);
 	font-weight: 500;
 	font-family: 'Comfortaa', sans-serif;
-	box-shadow: 1px 1px 5px 1px #a2a2a2;
-	color: var(--font-color);
+	color: var(--btn-text);
+	border-radius: 10px;
 }
 
 .timeline-container .card-stats .btn:hover{
-	background-color: #f47621;
-	box-shadow: 5px 5px 5px 3px #a2a2a2;
-	
+	color: var(--font-color);
+	box-shadow: var(--btn-shadow);
 }
 
 .event-part {
@@ -2502,4 +2503,181 @@ h5 {
 	.card-btn2 {
 		margin-right: 45px;
 	}
+}
+
+/*Team section */ 
+.container1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin: auto;
+}
+
+.our-team {
+    background: #f7f5ec;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+    margin: 0px ;
+    padding: 30px 0 40px;
+    width: 100%;
+    border-radius: 5%;
+}
+
+
+.our-team .pic{
+    display: inline-block;
+    width: 130px;
+    height: 130px;
+    margin-bottom: 0px;
+    z-index: 1;
+    position: relative;
+}
+
+.our-team .pic::before {
+    content: "";
+    width: 100%;
+    height: 0;
+    border-radius: 50%;
+    background: #F47621;
+    position: absolute;
+    bottom: 135%;
+    right: 0;
+    left: 0;
+    opacity: 0.2;
+    transform: scale(3);
+    transition: all 0.3s linear 0s;
+}
+
+.our-team:hover .pic::before {
+    height: 100%;
+}
+
+.our-team .pic:after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: #F47621;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;  
+}
+
+.our-team .pic img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    transform: scale(1);
+    transition: all 0.9s ease 0s;
+}
+
+.our-team:hover .pic img {
+    box-shadow: 0 0 0 14px #f7f5ec;
+    transform: scale(0.7);
+}
+
+.our-team .team-content {
+    margin-bottom: 30px;
+}
+
+.our-team title {
+    font-size: 22px;
+    font-weight: 700;
+    color: #4e5052;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+}
+
+.our-team .post {
+    display: block;
+    font-size: 15px;
+    color: #4e5052;
+}
+
+.our-team .social {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background: #F47621;
+    position: absolute;
+    bottom: -100px;
+    left: 0;
+    transition: all 0.5s ease 0s;
+}
+
+.our-team .social {
+    bottom: 0;
+}
+
+.our-team .social li {
+    display: inline-block;
+}
+
+.our-team .social li a {
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+    font-size: 17px;
+    color: #fff;
+    transition: all 0.3s ease 0s;
+}
+
+.our-team .social li a:hover{
+    color: #F47621;
+    background: #f7f5ec;
+}
+.carousel-item .card{
+    border-radius: 7%;
+}
+.carousel-item .card:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 10px 0px #F47621; 
+}
+								
+/* here */
+@media (max-width: 768px) {
+    .carousel-inner .carousel-item > div {
+        display: none;
+    }
+    .carousel-inner .carousel-item > div:first-child {
+        display: block;
+    }
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+    display: flex;
+}
+
+/* display 3 */
+@media (min-width: 768px) {
+    
+    .carousel-inner .carousel-item-right.active,
+    .carousel-inner .carousel-item-next {
+      transform: translateX(33.333%);
+    }
+    
+    .carousel-inner .carousel-item-left.active, 
+    .carousel-inner .carousel-item-prev {
+      transform: translateX(-33.333%);
+    }
+}
+
+.carousel-inner .carousel-item-right,
+.carousel-inner .carousel-item-left{ 
+  transform: translateX(0);
+}
+
+@media (max-width: 720px) {
+    .container1 {
+        flex-direction: column;
+    }
+    .our-team{
+        width: 100%;
+        margin-top: 0px;
+    }
 }
